[metadata]
name = iff-data-quality
description = Data Pipeline Quality Check Package 
author = IFF
license = IFF
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[options]
python_requires = >=3.11
zip_safe = no
include_package_data = True

[options.extras_require]
test = pytest>=7.2; pytest-cov>=3.0.0
